--- a/plugins/revolution/css/settings.css
+++ b/plugins/revolution/css/settings.css
@@ -87,8 +87,8 @@ website:   	http://www.themepunch.com
 
 @font-face {
     font-family: revicons;
-    src: url(../fonts/revicons/revicons.eot?5510888);
-    src: url(../fonts/revicons/revicons.eot?5510888#iefix) format('embedded-opentype'), url(../fonts/revicons/revicons.woff?5510888) format('woff'), url(../fonts/revicons/revicons.ttf?5510888) format('truetype'), url(../fonts/revicons/revicons.svg?5510888#revicons) format('svg');
+    src: url(https://html.kodesolution.com/2023/disle-html/fonts/revicons/revicons.eot?5510888);
+    src: url(https://html.kodesolution.com/2023/disle-html/fonts/revicons/revicons.eot?5510888#iefix) format('embedded-opentype'), url(https://html.kodesolution.com/2023/disle-html/fonts/revicons/revicons.woff?5510888) format('woff'), url(https://html.kodesolution.com/2023/disle-html/fonts/revicons/revicons.ttf?5510888) format('truetype'), url(https://html.kodesolution.com/2023/disle-html/fonts/revicons/revicons.svg?5510888#revicons) format('svg');
     font-weight: 400;
     font-style: normal
 }
@@ -878,19 +878,19 @@ img.tp-slider-alternative-image {
 }
 
 .tp-dottedoverlay.twoxtwo {
-    background: url(../assets/gridtile.png)
+    background: url(https://html.kodesolution.com/2023/disle-html/assets/gridtile.png)
 }
 
 .tp-dottedoverlay.twoxtwowhite {
-    background: url(../assets/gridtile_white.png)
+    background: url(https://html.kodesolution.com/2023/disle-html/assets/gridtile_white.png)
 }
 
 .tp-dottedoverlay.threexthree {
-    background: url(../assets/gridtile_3x3.png)
+    background: url(https://html.kodesolution.com/2023/disle-html/assets/gridtile_3x3.png)
 }
 
 .tp-dottedoverlay.threexthreewhite {
-    background: url(../assets/gridtile_3x3_white.png)
+    background: url(https://html.kodesolution.com/2023/disle-html/assets/gridtile_3x3_white.png)
 }
 
 .tp-shadowcover {
@@ -1358,16 +1358,16 @@ img.tp-slider-alternative-image {
 .tp-caption.slidelink a div {
     width: 3000px;
     height: 1500px;
-    background: url(../assets/coloredbg.png)
+    background: url(https://html.kodesolution.com/2023/disle-html/assets/coloredbg.png)
 }
 
 .tp-caption.slidelink a span {
-    background: url(../assets/coloredbg.png)
+    background: url(https://html.kodesolution.com/2023/disle-html/assets/coloredbg.png)
 }
 
 .tp-loader.spinner0,
 .tp-loader.spinner5 {
-    background-image: url(../assets/loader.gif);
+    background-image: url(https://html.kodesolution.com/2023/disle-html/assets/loader.gif);
     background-repeat: no-repeat
 }
 
