--- a/css/style.css
+++ b/css/style.css
@@ -1710,8 +1710,8 @@ Scroll To Top style
 
 .select2-container--default .select2-selection--single .select2-selection__arrow:before {
     position: relative;
-    content: "\f107";
-    font-family: "Font Awesome 6 Pro";
+    content: "\f078";
+    font-family: "Font Awesome 6 Free";
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
@@ -2899,7 +2899,7 @@ Main Header
 }
 
 .main-menu .navigation>li.dropdown>a:after {
-    content: "\f107";
+    content: "\f078";
     position: absolute;
     right: 0;
     top: 50%;
@@ -2909,7 +2909,7 @@ Main Header
     line-height: 24px;
     font-size: 12px;
     z-index: 5;
-    font-family: "Font Awesome 6 Pro";
+    font-family: "Font Awesome 6 Free";
     font-weight: 900;
     margin-top: -2px;
     -webkit-transform: translateY(-50%);
@@ -2977,8 +2977,8 @@ Main Header
 }
 
 .main-menu .navigation>li>ul>li.dropdown>a:after {
-    font-family: "Font Awesome 6 Pro";
-    content: "\f105";
+    font-family: "Font Awesome 6 Free";
+    content: "\f061";
     position: absolute;
     right: 0;
     top: 11px;
@@ -3892,7 +3892,7 @@ Sticky Header
 }
 
 .mobile-menu .navigation li.dropdown .dropdown-btn.active i:before {
-    content: "\f106";
+    content: "\f063";
 }
 
 .mobile-menu .navigation li>ul,
@@ -12080,13 +12080,13 @@ Page Title
 
 .page-breadcrumb li:after {
     position: absolute;
-    content: "\f105";
+    content: "\f061";
     right: -6px;
     top: 1px;
     color: #ffffff;
     font-size: 14px;
     font-weight: 900;
-    font-family: "Font Awesome 6 Pro";
+    font-family: "Font Awesome 6 Free";
     color: #ffffff;
 }
 
