--- a/css/style.css
+++ b/css/style.css
@@ -1167,7 +1167,7 @@ Scroll To Top style
     font-size: 14px;
     line-height: 30px;
     font-weight: 700;
-    font-family: "Font Awesome 6 Pro";
+    font-family: "Font Awesome 6 Free";
     background: var(--gradient-1);
     border-radius: 50%;
 }
@@ -11787,7 +11787,7 @@ table.tbl-shopping-cart>tfoot>tr>th {
 .shop-sidebar .category-widget .category-list li a:before {
     position: absolute;
     content: "\f0da";
-    font-family: "Font Awesome 6 Pro";
+    font-family: "Font Awesome 6 Free";
     left: 0px;
     top: 0px;
     font-size: 16px;
@@ -12080,7 +12080,7 @@ Page Title
 
 .page-breadcrumb li:after {
     position: absolute;
-    content: "\f061";
+    content: "\f054";
     right: -6px;
     top: 1px;
     color: #ffffff;
@@ -14687,7 +14687,7 @@ Sidebar
     font-size: 18px;
     color: #FFFFFF;
     font-weight: 900;
-    font-family: "Font Awesome 6 Pro";
+    font-family: "Font Awesome 6 Free";
     -webkit-transform: scale(0);
     transform: scale(0);
     -webkit-transition: all 300ms ease;
