--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,10 @@ License: copyright commercial
 
 :root {
     --theme-color-light: #ffffff;
-    --theme-color-dark: #171717;
+    --theme-color-dark: #0c1127;
     --theme-color1: #ee763c;
     --bg-theme-color1: var(--theme-color1);
-    --theme-color2: #171717;
+    --theme-color2: #0c1127;
     --bg-theme-color2: var(--theme-color2);
     --text-color-bg-theme-color1: #fff;
     --text-color-bg-theme-color2: #fff;
@@ -90,7 +90,7 @@ License: copyright commercial
     --sec-title-font-weight: 800;
     --theme-light-background: #f8f6f1;
     --theme-light-background-text-color: var(--headings-color);
-    --theme-black: #131313;
+    --theme-black: #0c1127;
     --container-width: 1200px;
     --small-container-width: 1000px;
     --large-container-width: 1310px;
@@ -1406,10 +1406,10 @@ Scroll To Top style
 }
 
 .bg-pattern-1 {
-    background-image: url(https://html.kodesolution.com/2023/disle-html/images/icons/pattern-1.jpg);
+    background-image: url(https://www.colorhexa.com/0c0c27.png);
 }
 
-.bg-pattern-2 {
+ .bg-pattern-2 {
     background-image: url(https://html.kodesolution.com/2023/disle-html/images/icons/pattern-2.jpg);
 }
 
@@ -1421,12 +1421,13 @@ Scroll To Top style
     background-image: url(https://html.kodesolution.com/2023/disle-html/images/icons/pattern-4.png);
 }
 
+
 .bg-pattern-5 {
-    background-image: url(https://html.kodesolution.com/2023/disle-html/images/icons/pattern-5.jpg);
+    background-image: url(https://img.freepik.com/free-vector/paper-style-dynamic-lines-background_23-2149011157.jpg?t=st=1742114925~exp=1742118525~hmac=55f7f6e77c45b0f31ebb8170d3ef2057d639ac166c7bd4e9fd54683899099642&w=2000);
 }
 
 .bg-pattern-6 {
-    background-image: url(https://html.kodesolution.com/2023/disle-html/images/icons/pattern-6.jpg);
+    background-image: url(https://img.freepik.com/free-vector/paper-style-dynamic-lines-background_23-2149011157.jpg?t=st=1742114925~exp=1742118525~hmac=55f7f6e77c45b0f31ebb8170d3ef2057d639ac166c7bd4e9fd54683899099642&w=2000);
 }
 
 .bg-pattern-7 {
@@ -14792,7 +14793,7 @@ Sidebar
 .footer-bottom {
     position: relative;
     z-index: 3;
-    background-color: #0f0f0f;
+    background-color: #0c1127;
     padding: 35px 0;
 }
 
