--- a/css/style.css
+++ b/css/style.css
@@ -1423,11 +1423,11 @@ Scroll To Top style
 
 
 .bg-pattern-5 {
-    background-image: url(https://img.freepik.com/free-vector/gradient-dark-dynamic-lines-background_23-2148995950.jpg?t=st=1742972915~exp=1742976515~hmac=f13f623e9619818c2426a35a22209849b049900f2eb112739c860439a04a4b5a&w=2000);
+    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/000/691/365/small/navy-blue-gradient-geometric-background.jpg);
 }
 
 .bg-pattern-6 {
-    background-image: url(https://img.freepik.com/free-vector/gradient-dark-dynamic-lines-background_23-2148995950.jpg?t=st=1742972915~exp=1742976515~hmac=f13f623e9619818c2426a35a22209849b049900f2eb112739c860439a04a4b5a&w=2000);
+    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/000/691/365/small/navy-blue-gradient-geometric-background.jpg);
 }
 
 .bg-pattern-7 {
