--- a/plugins/revolution/css/navigation.css
+++ b/plugins/revolution/css/navigation.css
@@ -22,7 +22,7 @@ website:    http://www.themepunch.com
 .ares.tparrows:hover {}
 
 .ares.tparrows:before {
-  font-family: "revicons";
+  font-family: "Font Awesome 6 Free";
   font-size: 25px;
   color: #aaa;
   display: block;
@@ -36,12 +36,19 @@ website:    http://www.themepunch.com
 }
 
 .ares.tparrows.tp-leftarrow:before {
-  content: "\e81f";
+  content: "\f104";
+  /* FA Left Arrow */
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
 }
 
 .ares.tparrows.tp-rightarrow:before {
-  content: "\e81e";
+  content: "\f105";
+  /* FA Right Arrow */
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
 }
+
 
 .ares.tparrows:hover:before {
   color: #000;
@@ -283,7 +290,8 @@ website:    http://www.themepunch.com
 }
 
 .custom.tparrows:before {
-  font-family: "revicons";
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
   font-size: 15px;
   color: #fff;
   display: block;
@@ -292,12 +300,15 @@ website:    http://www.themepunch.com
 }
 
 .custom.tparrows.tp-leftarrow:before {
-  content: "\e824";
+  content: "\f104";
+  /* Left Arrow */
 }
 
 .custom.tparrows.tp-rightarrow:before {
-  content: "\e825";
+  content: "\f105";
+  /* Right Arrow */
 }
+
 
 
 
